change device connection info related codes

--- a/dps/src/symmetric-key-individual-2steps/symmetric-client.csproj
+++ b/dps/src/symmetric-key-individual-2steps/symmetric-client.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include=".\Common\RandomTelemetry.cs" Link="RandomTelemetry.cs" />
     <Compile Include=".\Common\DPSDeviceClient.cs" Link="DPSDeviceClient.cs" />
     <Compile Include=".\Common\DataStorage.cs" Link="DataStorage.cs" />
+    <Compile Include=".\Common\DeviceModel.cs" Link="DeviceModel.cs" />
+    <Compile Include=".\Common\DevicePortalInfoModel.cs" Link="DevicePortalInfoModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.20.0" />
